localization/v2.4.x/site/de/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: >-
  Auf dieser Seite finden Sie eine Liste von Tutorials, die Ihnen helfen, mit
  Milvus zu arbeiten.
title: Übersicht Tutorials
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Übersicht Tutorials<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Auf dieser Seite finden Sie eine Liste von Tutorials, die Ihnen den Umgang mit Milvus erleichtern.</p>
<table>
<thead>
<tr><th>Lernprogramm</th><th>Anwendungsfall</th><th>Verwandte Milvus-Funktionen</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/de/v2.4.x/build-rag-with-milvus.md">RAG mit Milvus erstellen</a></td><td>RAG</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/how_to_enhance_your_rag.md">Erweiterte RAG</a></td><td>RAG</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/full_text_search_with_milvus.md">Volltextsuche mit Milvus</a></td><td>Schnellstart</td><td>Volltext-Suche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/hybrid_search_with_milvus.md">Hybride Suche mit Milvus</a></td><td>Hybride Suche</td><td>Hybride Suche, Multivektor, dichte Einbettung, spärliche Einbettung</td></tr>
<tr><td><a href="/docs/de/v2.4.x/image_similarity_search.md">Bildsuche mit Milvus</a></td><td>Semantische Suche</td><td>Vektorsuche, dynamisches Feld</td></tr>
<tr><td><a href="/docs/de/v2.4.x/multimodal_rag_with_milvus.md">Multimodale RAG mit Milvus</a></td><td>RAG</td><td>Vektorsuche, dynamisches Feld</td></tr>
<tr><td><a href="/docs/de/v2.4.x/multimodal_rag_with_milvus.md">Multimodale Suche mit Multi-Vektoren</a></td><td>Semantische Suche</td><td>Multivektor, hybride Suche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/graph_rag_with_milvus.md">Graph RAG mit Milvus</a></td><td>RAG</td><td>Graphen-Suche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/contextual_retrieval_with_milvus.md">Kontextuelles Retrieval mit Milvus</a></td><td>Schnellstart</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/hdbscan_clustering_with_milvus.md">HDBSCAN Clustering mit Milvus</a></td><td>Schnellstart</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/use_ColPali_with_milvus.md">ColPali für multimodales Retrieval mit Milvus verwenden</a></td><td>Schnellstart</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/vector_visualization.md">Vektor-Visualisierung</a></td><td>Schnellstart</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/movie_recommendation_with_milvus.md">Filmempfehlung mit Milvus</a></td><td>Empfehlungssystem</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/funnel_search_with_matryoshka.md">Trichtersuche mit Matryoshka-Embeddings</a></td><td>Schnellstart</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/question_answering_system.md">System zur Beantwortung von Fragen</a></td><td>Beantwortung von Fragen</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/recommendation_system.md">Empfehlungs-System</a></td><td>Empfehlungssystem</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/video_similarity_search.md">Video-Ähnlichkeitssuche</a></td><td>Semantische Suche</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/audio_similarity_search.md">Audio Ähnlichkeitssuche</a></td><td>Semantische Suche</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/dna_sequence_classification.md">DNA-Klassifizierung</a></td><td>Klassifizierung</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/text_search_engine.md">Text-Suchmaschine</a></td><td>Semantische Suche</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/text_image_search.md">Bildsuche nach Text</a></td><td>Semantische Suche</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/v2.4.x/image_deduplication_system.md">Bild-Deduplizierung</a></td><td>Deduplizierung</td><td>Vektorsuche</td></tr>
</tbody>
</table>
